tests/scan/fixtures/validation/negative/clean_go_clean-queue-consumer/clean-queue-consumer.go
// Package clean-queue-consumer is a clean Go module.
package clean-queue-consumer

func Hello() string { return "hello" }
